--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,6 +1,6 @@
 //Accueil
 .loader {  
-    background:-webkit-linear-gradient(#FFFFFF, #99E2D0, #FF79DA, #9356DC);
+    background: $color-gris-light;
     width: 100%;
     height: 100%;
     line-height: 100%;
@@ -9,36 +9,28 @@
     top: 0;
     left: 0;
     pointer-events: none;
-    animation: defilement 4s ease-in-out 3s forwards;  
+    animation: defilement 3s ease-in-out 2s forwards;
+    opacity: 1; /* Firefox, Chrome, Safari, Opera, IE >= 9 (preview) */
+    filter:alpha(opacity=1); /* for <= IE 8 */ 
   }
   /* Animation Texte défilant */
 .defilement {
-    display: block; 
-    margin: 50px auto ;
+    @include flex-config ($flex: 1, $align-items: center, $justify-content: center);
     text-align: center;
-    overflow: hidden; /* important évite débordement*/
-  p {
-    display: inline-block;/* important */
-    animation: defilement 10s; 
-    white-space: nowrap; /* important */
+    margin-top: 100px;
+    position: relative;   
+  .slogan1 {
+    line-height: 4rem;
     font-family: 'Shrikhand';
-    font-size: large;
-    line-height: 4rem; 
-    margin: 30px;
+    color: $color-primary;
+    font-size: large; 
+    margin: 70px 0 30px 0 ;
+  } 
+  .logo1 img{
+    width: 50%; 
+  }
   }
 
-  .logo1 img{
-    animation-duration: 750ms;
-    animation: 3s linear 2s slide-in;
-    position: relative;
-    width: 40%;
-    opacity: 0.6; /* Firefox, Chrome, Safari, Opera, IE >= 9 (preview) */
-    filter:alpha(opacity=0.60); /* for <= IE 8 */ 
-  }
-  @include tablet {
-    width: 40%;
-  } 
-}
 // Page du site
 header {
     width: 100%;
