--- a/public/css/style.css
+++ b/public/css/style.css
@@ -121,7 +121,6 @@ p {
   background: #f6f6f6;
   width: 100%;
   height: 100%;
-  line-height: 100%;
   position: fixed;
   /*page site en arriere plan*/
   z-index: 9999;
@@ -139,18 +138,22 @@ p {
 .defilement {
   display: flex;
   justify-content: center;
-  flex: 1;
+  flex: 2;
   align-items: center;
   text-align: center;
   margin-top: 100px;
   position: relative;
 }
 .defilement .slogan1 {
+  border-radius: 10px;
+  background: #9356DC;
   line-height: 4rem;
   font-family: "Shrikhand";
-  color: #9356DC;
-  font-size: large;
-  margin: 70px 0 30px 0;
+  color: white;
+  font-size: 1rem;
+  margin: 70px 0 70px 0;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 .defilement .logo1 img {
   width: 50%;
