--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -3,7 +3,6 @@
     background: $color-gris-light;
     width: 100%;
     height: 100%;
-    line-height: 100%;
     position: fixed; /*page site en arriere plan*/
     z-index: 9999;
     top: 0;
@@ -15,16 +14,20 @@
   }
   /* Animation Texte défilant */
 .defilement {
-    @include flex-config ($flex: 1, $align-items: center, $justify-content: center);
+    @include flex-config ($flex: 2, $align-items: center, $justify-content: center);
     text-align: center;
     margin-top: 100px;
     position: relative;   
   .slogan1 {
+    border-radius: 10px;
+    background:$color-primary;
     line-height: 4rem;
     font-family: 'Shrikhand';
-    color: $color-primary;
-    font-size: large; 
-    margin: 70px 0 30px 0 ;
+    color: $color-white;
+    font-size: 1rem; 
+    margin: 70px 0 70px 0;
+    padding-left: 20px;
+    padding-right: 20px;
   } 
   .logo1 img{
     width: 50%; 
