Modification animation loader

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -8,7 +8,7 @@
     top: 0;
     left: 0;
     pointer-events: none;
-    animation: defilement 3s ease-in-out 2s forwards;
+    animation: loader 3s ease-in-out 2s forwards;
     opacity: 1; /* Firefox, Chrome, Safari, Opera, IE >= 9 (preview) */
     filter:alpha(opacity=1); /* for <= IE 8 */ 
   }
