--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,31 +1,9 @@
-@charset "UTF-8";
 @keyframes loader {
   0% {
     opacity: 1;
   }
-  50% {
-    opacity: 0.5;
-  }
   100% {
     opacity: 0;
-  }
-}
-@keyframes slide-in {
-  from {
-    transform: scaleX(0);
-  }
-  to {
-    transform: scaleX(1);
-  }
-}
-@keyframes defilement {
-  0% {
-    -webkit-transform: translate(0);
-    transform: translate(0);
-  }
-  100% {
-    -webkit-transform: translate(-100%);
-    transform: translate(-100%);
   }
 }
 @keyframes clignote {
@@ -39,6 +17,24 @@
   }
   to {
     opacity: 1;
+  }
+}
+@keyframes grow {
+  0%, 100% {
+    -webkit-transform: scaleY(1);
+    transform: scaleY(1);
+  }
+  50% {
+    -webkit-transform: scaleY(1.8);
+    transform: scaleY(1.8);
+  }
+}
+@keyframes rotate {
+  from {
+    -webkit-transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(360deg);
   }
 }
 @keyframes heart {
@@ -127,14 +123,10 @@ p {
   top: 0;
   left: 0;
   pointer-events: none;
-  animation: loader 3s ease-in-out 2s forwards;
-  opacity: 1;
-  /* Firefox, Chrome, Safari, Opera, IE >= 9 (preview) */
-  filter: alpha(opacity=1);
-  /* for <= IE 8 */
+  animation: loader 2s ease-in-out 2s forwards;
 }
 
-/* Animation Texte défilant */
+/* Animation */
 .defilement {
   display: flex;
   justify-content: center;
@@ -143,6 +135,9 @@ p {
   text-align: center;
   margin-top: 100px;
   position: relative;
+}
+.defilement .logo1 img {
+  width: 50%;
 }
 .defilement .slogan1 {
   border-radius: 10px;
@@ -154,9 +149,6 @@ p {
   margin: 70px 0 70px 0;
   padding-left: 20px;
   padding-right: 20px;
-}
-.defilement .logo1 img {
-  width: 50%;
 }
 
 header {
@@ -304,6 +296,11 @@ header .logo {
     justify-content: space-around;
   }
 }
+@media screen and (min-width: 1024px) {
+  .menus__cartes {
+    width: 90%;
+  }
+}
 
 .card {
   border-radius: 20px;
@@ -320,6 +317,8 @@ header .logo {
 @media screen and (min-width: 1024px) {
   .card {
     width: 40%;
+    padding: 0;
+    margin: 10px;
   }
 }
 .card img {
@@ -433,7 +432,7 @@ header i {
 }
 
 .menu {
-  animation: fadein 3s ease-in-out;
+  animation: fadein 1s ease-in-out;
 }
 @media screen and (min-width: 1024px) {
   .menu {
@@ -452,6 +451,18 @@ header i {
   background-color: #99E2D0;
   animation: progress 2s;
   animation-fill-mode: both;
+}
+
+.entree {
+  animation: fadein 3s ease-in-out;
+}
+
+.plats {
+  animation: fadein 6s ease-in-out;
+}
+
+.dessert {
+  animation: fadein 9s ease-in-out;
 }
 
 .menu h4 {
