--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -1,30 +1,30 @@
 /*Header logo idem home +fleche retour Menu*/
 header 
 i {
-    position: absolute;
-    left: 20px;
+  position: absolute;
+  left: 20px;
 }
 /*Main*/
   /* Menu*/
-.header__img img{
-    object-fit: cover;
-    width: 100%;
-    height: 250px;
+.header__img img {
+  object-fit: cover;
+  width: 100%;
+  height: 250px;
 }
   /* Titre Menu*/
 .main__menu {
-    @include main-menu;
+  @include main-menu;
 }
 .menus__title {
   @include title;
   @include desktop {
-      padding: 10px 90px;
+  padding: 10px 90px;
   }
   .heart {
-    @include heart;
-    }
+  @include heart;
+  }
   .heart:hover {
-    @include heart-color;
+  @include heart-color;
   }
 }
 /* Carte menu*/
@@ -33,45 +33,54 @@ i {
     display: flex;
     justify-content: space-around;
     }
-  }
+}
 .menu {
-  animation: fadein 3s ease-in-out;
+  animation: fadein 1s ease-in-out;
   @include desktop {
   width: 400px;
-}
-    &__title {
+  }
+  &__title {
     @include after;
-    }
+  }
 }
-  .menu h4 {
-    padding-left: 15px;
-    margin-bottom: 5px;
-  }
-  .meals {
-    @include meals;
-  }
-  .last__line {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    line-height: 1.5em;
-  }
-  .last__line p {
-    margin-right: 10px;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
+.entree {
+  animation: fadein 3s ease-in-out;
+}
+.plats {
+  animation: fadein 6s ease-in-out;
+}
+.dessert {
+  animation: fadein 9s ease-in-out;
+}
+.menu h4 {
+  padding-left: 15px;
+  margin-bottom: 5px;
+}
+.meals {
+  @include meals;
+}
+.last__line {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  line-height: 1.5em;
+}
+.last__line p {
+  margin-right: 10px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
     @include desktop {
       padding-right: 20px;
     }
-  }
-  .last__line span {
-    margin-right: 10px;
-  }
-  .cross {
+}
+.last__line span {
+  margin-right: 10px;
+}
+.cross {
     @include cross;
-  } 
-  .btn__order {
+} 
+.btn__order {
     display: flex;
     justify-content: center;
 }
