--- a/sass/utils/_keyframes.scss
+++ b/sass/utils/_keyframes.scss
@@ -3,27 +3,12 @@
   0% {
     opacity: 1;
   }
-  50% {
-    opacity: 0.5;
-  }
+
   100% {
     opacity: 0;
   }
 }
-@keyframes slide-in {
-  from { transform: scaleX(0); }
-  to   { transform: scaleX(1); }
-}
-@keyframes defilement {
-  0% {
-    -webkit-transform: translate(0);
-    transform: translate(0);
-  }
-  100% {
-    -webkit-transform: translate(-100%);
-    transform: translate(-100%);
-  }
-}
+
 // card new
 @keyframes clignote {  
   50% { opacity: 0; }
@@ -37,6 +22,25 @@
     opacity:1;
   }
 }
+@keyframes grow{
+  0%,100% {
+    -webkit-transform: scaleY(1);
+    transform: scaleY(1);
+  }
+  50%{
+    -webkit-transform: scaleY(1.8);
+    transform: scaleY(1.8);
+  }
+}
+@keyframes rotate {
+  from{
+    -webkit-transform: rotate(0deg);
+  }
+  to{
+    -webkit-transform: rotate(360deg);
+  }
+}
+
  // Coloration coeur
 @keyframes heart {
     0% {
