--- a/public/css/style.css
+++ b/public/css/style.css
@@ -197,6 +197,7 @@ header .logo {
 }
 .slogan__btn {
   background: linear-gradient(to bottom, #ff79da, #e86edb, #cf64dc, #b35cdc, #9356dc);
+  border: 1px solid transparent;
   border-radius: 30px;
   color: white;
   width: 180px;
@@ -210,9 +211,9 @@ header .logo {
   margin: 20px 0 50px;
 }
 .slogan button:hover {
-  opacity: 0.8;
-  transform: scale(1);
-  box-shadow: 1px 1px 6px black;
+  background-color: #ae80e5;
+  background-blend-mode: lighten;
+  box-shadow: 4px 4px 6px #000;
 }
 
 .action h2 {
@@ -546,6 +547,7 @@ header i {
 
 .btn__order button {
   background: linear-gradient(to bottom, #ff79da, #e86edb, #cf64dc, #b35cdc, #9356dc);
+  border: 1px solid transparent;
   border-radius: 30px;
   color: white;
   width: 180px;
@@ -566,7 +568,9 @@ header i {
   }
 }
 .btn__order button:hover {
-  opacity: 0.8;
+  background-color: #ae80e5;
+  background-blend-mode: lighten;
+  box-shadow: 4px 4px 6px #000;
 }
 
 footer {
