--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -30,8 +30,8 @@
       margin: 20px 0 50px;
     }
   button:hover {
-    opacity: 0.8;
-    transform: scale(1);
+    background-color: lighten(#9356dc, 10%);
+    background-blend-mode: lighten;
     @include darker-shadow;
   }    
 }
