--- a/public/css/style.css
+++ b/public/css/style.css
@@ -74,19 +74,22 @@ a {
 }
 
 /*Polices*/
-body, html {
+body,
+html {
   font-family: "Roboto", sans-serif;
   font-size: 1rem;
   line-height: 1.6rem;
 }
 
-h1, h2 {
+h1,
+h2 {
   font-weight: 900;
   font-size: 1.6rem;
   padding: 20px 40px;
 }
 
-figcaption, p {
+figcaption,
+p {
   font-family: "Roboto";
   font-size: 1.2em;
   font-weight: 300;
@@ -114,6 +117,11 @@ p {
 }
 
 .loader {
+  display: flex;
+  justify-content: center;
+  flex: 2;
+  flex-direction: column;
+  align-items: center;
   background: #f6f6f6;
   width: 100%;
   height: 100%;
@@ -123,34 +131,33 @@ p {
   top: 0;
   left: 0;
   pointer-events: none;
-  animation: loader 2s ease-in-out 2s forwards;
+  animation: loader 3s ease-in-out 2s forwards;
 }
-
-/* Animation */
-.defilement {
+.loader .logo1 {
+  margin-top: 100px;
   display: flex;
   justify-content: center;
-  flex: 2;
-  align-items: center;
-  text-align: center;
-  margin-top: 100px;
-  position: relative;
+  align-items: flex-end;
 }
-.defilement .logo1 img {
-  width: 50%;
+.loader .logo1 img {
+  max-width: 200px;
+  position: absolute;
+  animation: rotate 1s linear infinite;
 }
-.defilement .slogan1 {
+.loader .slogan1 {
+  display: flex;
+  justify-content: center;
   border-radius: 10px;
   background: #9356DC;
   line-height: 4rem;
   font-family: "Shrikhand";
   color: white;
   font-size: 1rem;
-  margin: 70px 0 70px 0;
-  padding-left: 20px;
-  padding-right: 20px;
+  margin-top: 50px;
+  padding: 20px;
 }
 
+/* Animation */
 header {
   width: 100%;
   margin-top: 20px;
@@ -224,6 +231,9 @@ header .logo {
     display: flex;
     justify-content: center;
   }
+}
+.action ul {
+  margin: 20px auto;
 }
 .action p {
   font-weight: bold;
@@ -317,7 +327,7 @@ header .logo {
 }
 @media screen and (min-width: 1024px) {
   .card {
-    width: 40%;
+    max-width: 40%;
     padding: 0;
     margin: 10px;
   }
@@ -388,15 +398,6 @@ header i {
 }
 
 /* Titre Menu*/
-.main__menu {
-  background-color: #f6f6f6;
-  border-top-left-radius: 25px;
-  border-top-right-radius: 25px;
-  width: 100%;
-  position: relative;
-  margin-top: -50px;
-}
-
 .menus__title {
   font-family: Shrikhand, sans-serif;
   display: flex;
@@ -425,6 +426,15 @@ header i {
 }
 
 /* Carte menu*/
+.main__menu {
+  background-color: #f6f6f6;
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
+  width: 100%;
+  position: relative;
+  margin-top: -50px;
+}
+
 @media screen and (min-width: 1024px) {
   .full__menu {
     display: flex;
@@ -433,12 +443,7 @@ header i {
 }
 
 .menu {
-  animation: fadein 1s ease-in-out;
-}
-@media screen and (min-width: 1024px) {
-  .menu {
-    width: 400px;
-  }
+  animation: fadein 0.5s ease-in-out;
 }
 .menu__title {
   margin-bottom: 25px;
@@ -455,15 +460,30 @@ header i {
 }
 
 .entree {
-  animation: fadein 3s ease-in-out;
+  animation: fadein 1s ease-in-out;
+}
+@media screen and (min-width: 1024px) {
+  .entree {
+    width: 400px;
+  }
 }
 
 .plats {
-  animation: fadein 6s ease-in-out;
+  animation: fadein 2s ease-in-out;
+}
+@media screen and (min-width: 1024px) {
+  .plats {
+    width: 400px;
+  }
 }
 
 .dessert {
-  animation: fadein 9s ease-in-out;
+  animation: fadein 3s ease-in-out;
+}
+@media screen and (min-width: 1024px) {
+  .dessert {
+    width: 400px;
+  }
 }
 
 .menu h4 {
@@ -495,29 +515,6 @@ header i {
   transform: rotate(360deg);
 }
 
-.last__line {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  line-height: 1.5em;
-}
-
-.last__line p {
-  margin-right: 10px;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
-}
-@media screen and (min-width: 1024px) {
-  .last__line p {
-    padding-right: 20px;
-  }
-}
-
-.last__line span {
-  margin-right: 10px;
-}
-
 .cross {
   display: flex;
   justify-content: center;
@@ -540,9 +537,27 @@ header i {
   transition: transform 500ms ease-in-out;
 }
 
-.btn__order {
+.last__line {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+  align-items: center;
+  line-height: 1.5em;
+}
+
+.last__line p {
+  margin: 0;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+@media screen and (min-width: 1024px) {
+  .last__line p {
+    padding-right: 20px;
+  }
+}
+
+.last__line span {
+  margin-right: 5px;
 }
 
 .btn__order button {
@@ -559,8 +574,8 @@ header i {
   font-weight: 500;
   box-shadow: 4px 4px 6px #332f2f;
   text-align: center;
-  margin: 40px 0;
-  width: 40%;
+  margin: 30px 0;
+  width: 50%;
 }
 @media screen and (min-width: 1024px) {
   .btn__order button {
@@ -573,6 +588,11 @@ header i {
   box-shadow: 4px 4px 6px #000;
 }
 
+.btn__order {
+  display: flex;
+  justify-content: center;
+}
+
 footer {
   background-color: #332f2f;
   padding-left: 20px;
@@ -582,6 +602,9 @@ footer {
 footer img {
   height: 1.3rem;
   filter: invert(100%);
+}
+footer ul {
+  margin: 20px auto;
 }
 footer li {
   list-style-type: none;
