--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -1,103 +1,131 @@
 /*Header logo idem home +fleche retour Menu*/
-header 
-i {
-  position: absolute;
-  left: 20px;
+
+header i {
+    position: absolute;
+    left: 20px;
 }
+
+
 /*Main*/
-  /* Menu*/
+
+
+/* Menu*/
+
 .header__img img {
-  object-fit: cover;
-  width: 100%;
-  height: 250px;
+    object-fit: cover;
+    width: 100%;
+    height: 250px;
 }
-  /* Titre Menu*/
-.main__menu {
-  @include main-menu;
-}
+
+
+/* Titre Menu*/
+
 .menus__title {
-  @include title;
-  @include desktop {
-  padding: 10px 90px;
-  }
-  .heart {
-  @include heart;
-  }
-  .heart:hover {
-  @include heart-color;
-  }
-}
-/* Carte menu*/
-.full__menu {
-  @include desktop {
-    display: flex;
-    justify-content: space-around;
-    }
-}
-.menu {
-  animation: fadein 1s ease-in-out;
-  @include desktop {
-  width: 400px;
-  }
-  &__title {
-    @include after;
-  }
-}
-.entree {
-  animation: fadein 3s ease-in-out;
-}
-.plats {
-  animation: fadein 6s ease-in-out;
-}
-.dessert {
-  animation: fadein 9s ease-in-out;
-}
-.menu h4 {
-  padding-left: 15px;
-  margin-bottom: 5px;
-}
-.meals {
-  @include meals;
-}
-.last__line {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  line-height: 1.5em;
-}
-.last__line p {
-  margin-right: 10px;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
+    @include title;
     @include desktop {
-      padding-right: 20px;
+        padding: 10px 90px;
+    }
+    .heart {
+        @include heart;
+    }
+    .heart:hover {
+        @include heart-color;
     }
 }
-.last__line span {
-  margin-right: 10px;
+
+
+/* Carte menu*/
+
+.main__menu {
+    @include main-menu;
 }
+
+.full__menu {
+    @include desktop {
+        display: flex;
+        justify-content: space-around;
+    }
+}
+
+.menu {
+    animation: fadein 0.5s ease-in-out;
+    @include desktop;
+    &__title {
+        @include after;
+    }
+}
+
+.entree {
+    animation: fadein 1s ease-in-out;
+    @include desktop {
+        width: 400px;
+    }
+}
+
+.plats {
+    animation: fadein 2s ease-in-out;
+    @include desktop {
+        width: 400px;
+    }
+}
+
+.dessert {
+    animation: fadein 3s ease-in-out;
+    @include desktop {
+        width: 400px;
+    }
+}
+
+.menu h4 {
+    padding-left: 15px;
+    margin-bottom: 5px;
+}
+
+.meals {
+    @include meals;
+}
+
 .cross {
     @include cross;
-} 
+}
+
+.last__line {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    line-height: 1.5em;
+}
+
+.last__line p {
+    margin: 0;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    @include desktop {
+        padding-right: 20px;
+    }
+}
+
+.last__line span {
+    margin-right: 5px;
+}
+
+.btn__order button {
+    @include btn__color;
+    text-align: center;
+    margin: 30px 0;
+    width: 50%;
+    @include desktop {
+        width: 25%;
+    }
+    &:hover {
+        background-color: lighten(#9356dc, 10%);
+        background-blend-mode: lighten;
+        @include darker-shadow;
+    }
+}
+
 .btn__order {
     display: flex;
     justify-content: center;
 }
-.btn__order button {
-  @include btn__color;
-  text-align: center;
-  margin: 40px 0;
-  width: 40%;
-  @include desktop {
-    width: 25%;
-  }
-  &:hover {
-    background-color: lighten(#9356dc, 10%);
-    background-blend-mode: lighten;
-    @include darker-shadow; 
-  }
-}
-
-    
-
