--- a/sass/utils/_breakpoints.scss
+++ b/sass/utils/_breakpoints.scss
@@ -1,22 +1,24 @@
 // MediaQuery
 @mixin tablet {
-  @media screen and (min-width:map-get($breakpoints, tablet)){
-          @content;
-  }
+    @media screen and (min-width: map-get($breakpoints, tablet)) {
+        @content;
+    }
 }
+
+@mixin laptop {
+    @media screen and (min-width: map-get($breakpoints, laptop)) {
+        @content;
+    }
+}
+
 @mixin desktop {
-  @media screen and (min-width:map-get($breakpoints, desktop)){
-          @content;
-  }
+    @media screen and (min-width: map-get($breakpoints, desktop)) {
+        @content;
+    }
 }
-@mixin large {
-  @media screen and (min-width:map-get($breakpoints, large)){
-          @content;
-  }
-}
-      
+
 @mixin medium-screen {
-  @media screen and (min-width: map-get($breakpoints, medium)) {
-          @content;
-  }
+    @media screen and (min-width: map-get($breakpoints, medium)) {
+        @content;
+    }
 }
