--- a/sass/utils/_keyframes.scss
+++ b/sass/utils/_keyframes.scss
@@ -1,60 +1,71 @@
-//loader
-@keyframes loader {
-    0% {
-        opacity: 1;
+    //loader
+    @keyframes loader {
+        0% {
+            opacity: 1;
+        }
+        100% {
+            opacity: 0;
+        }
     }
-    100% {
-        opacity: 0;
+    
+    @keyframes defilement-rtl {
+        0% {
+            transform: translate3d(0, 0, 0);
+            /* position initiale à droite */
+        }
+        100% {
+            transform: translate3d(-100%, 0, 0);
+            /* position finale à gauche */
+        }
     }
-}
-
-// card new
-@keyframes clignote {
-    50% {
-        opacity: 0;
+    
+    // card new
+    @keyframes clignote {
+        50% {
+            opacity: 0;
+        }
     }
-}
-
-//Décalage ouverture sur page menu
-@keyframes fadein {
-    from {
-        opacity: 0;
+    
+    //Décalage ouverture sur page menu
+    @keyframes fadein {
+        from {
+            opacity: 0;
+        }
+        to {
+            opacity: 1;
+        }
     }
-    to {
-        opacity: 1;
+    
+    @keyframes grow {
+        0%,
+        100% {
+            -webkit-transform: scaleY(1);
+            transform: scaleY(1);
+        }
+        50% {
+            -webkit-transform: scaleY(1.8);
+            transform: scaleY(1.8);
+        }
     }
-}
-
-@keyframes grow {
-    0%,
-    100% {
-        -webkit-transform: scaleY(1);
-        transform: scaleY(1);
+    
+    @keyframes rotate {
+        from {
+            -webkit-transform: rotate(0deg);
+        }
+        to {
+            -webkit-transform: rotate(360deg);
+        }
     }
-    50% {
-        -webkit-transform: scaleY(1.8);
-        transform: scaleY(1.8);
+    
+    // Coloration coeur
+    @keyframes heart {
+        0% {
+            opacity: 0;
+        }
+        50% {
+            opacity: 0.5;
+        }
+        100% {
+            opacity: 1;
+        }
     }
-}
-
-@keyframes rotate {
-    from {
-        -webkit-transform: rotate(0deg);
-    }
-    to {
-        -webkit-transform: rotate(360deg);
-    }
-}
-
-// Coloration coeur
-@keyframes heart {
-    0% {
-        opacity: 0;
-    }
-    50% {
-        opacity: 0.5;
-    }
-    100% {
-        opacity: 1;
-    }
-}
